:sparkles:Agrega ruc en persona con validación

--- a/apps/templates/persona/crear.html
+++ b/apps/templates/persona/crear.html
@@ -92,6 +92,11 @@
                                     {% field form.correo_personal label=True label_width=3 %}
                                 </div>
                             </div>
+                            <div class="col-md-12">
+                                <div class="col-md-4">
+                                    {% field form.ruc label=True %}
+                                </div>
+                            </div>
                             <div class="col-md-12" id="div_resumen">
                                 <div class="col-md-12">
                                     {% field form.resumen label=True label_width=1 %}
