:bug: Correge la descarga del CV y agrega RUC

--- a/apps/templates/persona/plantilla_pdf.html
+++ b/apps/templates/persona/plantilla_pdf.html
@@ -144,6 +144,10 @@
         <td class="td_70">{{ p.numero_documento }}</td>
     </tr>
     <tr>
+        <td class="td_25" style="text-align:right;">RUC :</td>
+        <td class="td_70">{{ p.ruc }}</td>
+    </tr>
+    <tr>
         <td class="td_25" style="text-align:right;">Fecha de Nacimiento :</td>
         <td class="td_70">{{ p.datosgenerales.fecha_nacimiento }}</td>
     </tr>
