:fire: Quita DatosColegiatura form de views y arregla en crear con form

--- a/apps/templates/persona/crear.html
+++ b/apps/templates/persona/crear.html
@@ -156,16 +156,16 @@
                         </legend>
                         <div class="row center-block">
                             <div class="col-lg-12">
-                                {% field form_datos_colegiatura.colegio_profesional label=True %}
+                                {% field form.colegio_profesional_select label=True %}
                             </div>
                             <div class="col-lg-6">
-                                {% field form_datos_colegiatura.sede_colegio label=True %}
+                                {% field form.sede_colegio_input label=True %}
                             </div>
                             <div class="col-lg-3">
-                                {% field form_datos_colegiatura.codigo_colegiado label=True %}
+                                {% field form.codigo_colegiado_input label=True %}
                             </div>
                             <div class="col-lg-3">
-                                {% field form_datos_colegiatura.estado_colegiado label=True %}
+                                {% field form.estado_colegiado_select label=True %}
                             </div>
                         </div>
                     </fieldset>
