:sparkles: Agrega el boton Agregar colegiatura en persona

--- a/apps/templates/persona/crear.html
+++ b/apps/templates/persona/crear.html
@@ -155,8 +155,15 @@
                             Colegiatura
                         </legend>
                         <div class="row center-block">
-                            <div class="col-lg-12">
+                            <div class="col-lg-10">
                                 {% field form.colegio_profesional_select label=True %}
+                            </div>
+                            <div class="col-lg-2">
+                                <label style="opacity: 0">-------</label>
+                                <button type="button" class="pull-right btn btn-primary btn-sm my-1"
+                                        id="btn-agregar-colegiatura">
+                                    <i class="fa fa-plus"></i> Agregar colegiatura
+                                </button>
                             </div>
                             <div class="col-lg-6">
                                 {% field form.sede_colegio_input label=True %}
