:sparkles:Agrega tabla formset

--- a/apps/templates/persona/partials/colegiatura_formset.html
+++ b/apps/templates/persona/partials/colegiatura_formset.html
@@ -1,1 +1,16 @@
-Hola de Colegiatura form_set
+{% load form_tags %}
+{{ colegiatura_formset.management_form }}
+<table class="table table-bordered">
+    <thead>
+    <tr>
+        <th class="col-2">Colegio profesional</th>
+        <th class="col-8">Sede</th>
+        <th class="col-8">código</th>
+        <th class="col-8">Estado</th>
+        <th class="col-2">&nbsp;&nbsp;</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table>
