:art: Mejora la estructura de colegiatura form_set

--- a/apps/templates/persona/partials/colegiatura_formset.html
+++ b/apps/templates/persona/partials/colegiatura_formset.html
@@ -1,5 +1,5 @@
 {% load form_tags %}
-<div class="row center-block">
+<div class="row center-block" style="margin:2px;">
     <div class="col-lg-12">
         {{ colegiatura_formset.management_form }}
         <table class="table table-bordered">
