:boom: agrega responsabilidad social y CV detallado

--- a/apps/templates/base_partials/_nav.html
+++ b/apps/templates/base_partials/_nav.html
@@ -37,9 +37,9 @@
                             <i class="fa fa-briefcase"></i>
                         </div>
                         <div class="col-lg-7 col-md-7 col-xs-7">
-                            <p data-toggle="tooltip" title="Experiancia laboral" data-placement="bottom"
+                            <p data-toggle="tooltip" title="Experiencia laboral" data-placement="bottom"
                                class="modulo ocultar ellipsis blue-tooltip" style="margin-top: 0.7rem; font-size:13px;">
-                                Experiancia laboral
+                                Experiencia laboral
                             <p>
                         </div>
                     </a>
@@ -112,6 +112,20 @@
                         </a>
                     </li>
                 {% endif %}
+                <li>
+                    <a href="/cursos/agregar-rsu/{{ identificador_persona }}">
+                        <div class="col-lg-3 col-md-3 col-xs-3">
+                            <i class="fa fa-flag"></i>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-xs-7">
+                            <p data-toggle="tooltip" title="Responsabilidad Social" data-placement="bottom"
+                               class="modulo ocultar ellipsis blue-tooltip"
+                               style="margin-top: 0.7rem; font-size:13px;">
+                                Responsabilidad Social
+                            <p>
+                        </div>
+                    </a>
+                </li>
                 <li>
                     <a href="/exportar-cv/{{ identificador_persona }}">
                         <div class="col-lg-3 col-md-3 col-xs-3">
