:ambulance: permite agregar multiples colegiaturas

--- a/apps/templates/cursos/agregar_cursos.html
+++ b/apps/templates/cursos/agregar_cursos.html
@@ -42,14 +42,6 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-{#                                    {% for curso in cursos_registrados %}#}
-{#                                        <tr>#}
-{#                                            <td>{{ curso.institucion }}</td>#}
-{#                                            <td>{{ curso.escuela }}</td>#}
-{#                                            <td>{{ curso.curso }}</td>#}
-{#                                            <td>{{ curso.semestre }}</td>#}
-{#                                        </tr>#}
-{#                                    {% endfor %}#}
                                     </tbody>
                                 </table>
                             </div>
@@ -66,7 +58,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Registro de cursos dictados {{ pk }}</h5>
+                    <h5 class="modal-title">Registro de cursos dictados</h5>
                 </div>
 
 {#                <form method="POST" action="{% url 'cursos:agregar-cursos' pk %}" id="cursos-form">#}
