--- a/apps/templates/distincion/partials/_modal_distincion.html
+++ b/apps/templates/distincion/partials/_modal_distincion.html
@@ -8,7 +8,8 @@
                         id="btnCerrarHeaderModalDistincion">x
                 </button>
             </div>
-            <form id="formDistincion" action="POST" class="p-2">
+
+            <form id="formularioDistincion" method="POST" class="p-2">
                 {% csrf_token %}
                 <div id="errores_list"></div>
                 <div class="modal-body">
