:bug: corrige el formulario que mostraba los campos solo como texto

--- a/apps/templates/produccion/partials/_modal_cientifica.html
+++ b/apps/templates/produccion/partials/_modal_cientifica.html
@@ -8,7 +8,7 @@
                         id="btnCerrarHeaderModalCientifica">x
                 </button>
             </div>
-            <form id="formCientifica" action="POST" class="p-2">
+            <form id="formularioCientifica" action="POST" class="p-2">
                 {% csrf_token %}
                 <div id="errores_list"></div>
                 <div class="modal-body">
