--- a/apps/templates/formacion/formacion_academica.html
+++ b/apps/templates/formacion/formacion_academica.html
@@ -31,11 +31,18 @@
                                    aria-selected="false">Técnico superior</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" id="maestria-tab" data-toggle="tab" href="#maestria" role="tab"
+                                   aria-controls="maestria" aria-selected="false">
+                                    Maestrías
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" id="complementaria-tab" data-toggle="tab" href="#complementaria"
                                    role="tab" aria-controls="complementaria"
                                    aria-selected="false">Complementaria</a>
                             </li>
                         </ul>
+
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade active in" id="universitaria" role="tabpanel"
                                  aria-labelledby="universitaria-tab">
@@ -67,6 +74,7 @@
                                     </table>
                                 </div>
                             </div>
+
                             <div class="tab-pane fade" id="tecnico" role="tabpanel" aria-labelledby="tecnico-tab">
                                 &nbsp;
                                 <div align="right">
@@ -94,6 +102,7 @@
                                     </table>
                                 </div>
                             </div>
+
                             <div class="tab-pane fade" id="complementaria" role="tabpanel"
                                  aria-labelledby="complementaria-tab">
                                 &nbsp;
@@ -126,6 +135,39 @@
                                     </table>
                                 </div>
                             </div>
+
+                            <div class="tab-pane fade" id="maestria" role="tabpanel"
+                                 aria-labelledby="maestria-tab">
+                                &nbsp;
+                                <div align="right">
+                                    <a class="btn btn-primary m-b-sm" data-added="0" id="agrega-maestria">
+                                        <i class="fa fa-plus" aria-hidden="true"></i> Agregar maestria
+                                    </a>
+                                    <br>&nbsp;
+                                </div>
+                                <div class="table-responsive">
+                                    <table id="tabla-maestria"
+                                           class="table table-striped table-bordered display nowrap"
+                                           style="max-width:1000px; width:100%!important;">
+                                        <thead>
+                                        <tr>
+                                            <th>Maestria</th>
+                                            <th>Centro de estudios</th>
+                                            <th>País</th>
+                                            <th>Modalidad</th>
+                                            <th>Duración</th>
+                                            <th>Fecha inicio</th>
+                                            <th>Fecha fin</th>
+                                            <th>Adjuntos</th>
+                                            <th>Editar</th>
+                                            <th>Eliminar</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,9 +177,11 @@
     <input type="hidden" id="id_universitaria">
     <input type="hidden" id="id_tecnico">
     <input type="hidden" id="id_complementaria">
+    <input type="hidden" id="id_maestria">
     {% include 'formacion/partials/_modal_universitaria.html' %}
     {% include 'formacion/partials/_modal_tecnico.html' %}
     {% include 'formacion/partials/_modal_complementaria.html' %}
+    {% include 'formacion/partials/_modal_maestria.html' %}
     {% include 'formacion/partials/_modal_adjuntar_archivos_formacion.html' %}
 {% endblock %}
 {% block javascript %}
@@ -145,15 +189,23 @@
         var urlListaUniversitaria = "{% url 'formacion:lista_universitaria' pk %}";
         var urlListaTecnico = "{% url 'formacion:lista_tecnico' pk %}";
         var urlListaComplementaria = "{% url 'formacion:lista_complementaria' pk %}";
+        var urlListaMaestria = "{% url 'formacion:lista_maestria' pk %}";
+
         var urlGuardarUniversitaria = "{% url 'formacion:guardar_universitaria' pk %}";
         var urlGuardarTecnico = "{% url 'formacion:guardar_tecnico' pk %}";
         var urlGuardarComplementaria = "{% url 'formacion:guardar_complementaria' pk %}";
+        var urlGuardarMaestria = "{% url 'formacion:guardar_maestria' pk %}";
+
         var urlConsultaUniversitaria = "{% url 'formacion:consulta_universitaria' 'id' %}";
         var urlConsultaTecnico = "{% url 'formacion:consulta_tecnico' 'id' %}";
         var urlConsultaComplementaria = "{% url 'formacion:consulta_complementaria' 'id' %}";
+        var urlConsultaMaestria = "{% url 'formacion:consulta_maestria' 'id' %}";
+
         var urlSubirArchivos = "{% url 'formacion:subir_archivos' 'id' 'tipo' %}";
         var urlListaArchivos = "{% url 'formacion:listar_archivos' 'id' 'tipo' %}";
         var urlEliminarArchivo = "{% url 'formacion:eliminar_archivo' 'id' 'tipo' %}";
+
+        var urlEliminarMaestria = "{% url 'formacion:eliminar_maestria' 'id' %}";
         var urlEliminarComplementaria = "{% url 'formacion:eliminar_complementaria' 'id' %}";
         var urlEliminarTecnico = "{% url 'formacion:eliminar_tecnico' 'id' %}";
         var urlEliminarUniversitaria = "{% url 'formacion:eliminar_universitaria' 'id' %}";
@@ -174,5 +226,6 @@
     <script src="{% static 'js/formacion/modal-universitaria.js' %}"></script>
     <script src="{% static 'js/formacion/modal-tecnico.js' %}"></script>
     <script src="{% static 'js/formacion/modal-complementaria.js' %}"></script>
+    <script src="{% static 'js/formacion/modal-maestria.js' %}"></script>
     <script src="{% static 'js/formacion/modal-adjuntar-archivos-formacion.js' %}"></script>
 {% endblock %}
